--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,8 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        "files": ["app/Helpers/permissions.php"]
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
